# Aether

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Editor/src/: CMakeLists.txt  EditorConfig.cpp  EditorConfig.h  EditorLayer.cpp  EditorLayer.h  EditorRenderingSystem.cpp
Editor/src/Components/: EditorCamera.h
Editor/src/Panels/: EditorPanel.h  PropertiesPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp  ViewportPanel.h
Editor/src/Themes/: DarkBlue.h  Sapphire.h  ThemeRegistry.cpp  ThemeRegistry.h
Engine/: CMakeLists.txt
Engine/include/Aether/Components/Core/: Name.h
Engine/include/Aether/Components/Physics/: Velocity.h
Engine/include/Aether/Components/Rendering/: Camera.h
Engine/include/Aether/Core/: Application.h  Assert.h  EntryPoint.h  Hash.h  RuntimeObject.h  String.h  StringView.h
Engine/include/Aether/Core/Memory/: Allocator.h  BasicAllocator.h  Pointer.h
Engine/include/Aether/ECS/: ComponentStorage.h  EntityManager.h  IComponentStorage.h
Engine/include/Aether/Events/: Event.h  EventDispatcher.h  EventQueue.h  InputEvent.h  MouseEvent.h  WindowEvent.h
Engine/include/Aether/Input/: MouseButton.h
Engine/include/Aether/Platform/: Platform.h  Window.h
Engine/include/Aether/Renderer/: Buffer.h  Material.h  Mesh.h  RenderSurface.h  Shader.h  Texture.h
Engine/include/Aether/Scene/: Entity.h  Scene.h
Engine/include/Aether/Systems/Movement/: MovementSystem.h
Engine/include/Aether/Systems/Rendering/: RenderingSystem.h
Engine/src/Core/: Hash.cpp  Layer.cpp  LayerStack.cpp  String.cpp  StringBuilder.cpp  StringView.cpp
Engine/src/Core/Memory/: BasicAllocator.cpp  DefaultAllocator.h  LinearAllocator.cpp  TempAllocator.h  TempScope.cpp  TempScope.h
Engine/src/ECS/: EntityManager.cpp  Registry.cpp
Engine/src/Events/: CMakeLists.txt
Engine/src/Log/: Log.cpp  NullSink.cpp  StdColorSink.cpp
Engine/src/Math/: CMakeLists.txt  Interop.cpp  Math.cpp
Engine/src/Platform/: CMakeLists.txt
Engine/src/Platform/glfw/: GLFWGraphicsContext.cpp  GLFWGraphicsContext.h  GLFWInput.h  GLFWWindow.cpp  GLFWWindow.h
Engine/src/Renderer/: CMakeLists.txt  RenderThread.cpp
Engine/src/Renderer/OpenGL/: GLBackend.h
Engine/src/Scene/: Scene.cpp  SceneManager.cpp
Engine/src/Systems/Rendering/: RenderingSystem.cpp
Sandbox/src/: CMakeLists.txt
src/: CMakeLists.txt
src/Editor/: CMakeLists.txt
src/Editor/src/: CMakeLists.txt  EditorApp.cpp  EditorApp.h  EditorContext.h  EditorFonts.cpp  EditorFonts.h  EditorLayer.cpp  EditorLayer.h  EditorRenderingSystem.cpp  EditorRenderingSystem.h  main.cpp
src/Editor/src/Panels/: EditorPanel.h  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ViewportPanel.cpp  ViewportPanel.h
src/Editor/src/Themes/: Aether.h  Catppuccin.h  Crimson.h  Gruvbox.h  MidnightForge.h  ThemeRegistry.h
src/Engine/: CMakeLists.txt
src/Engine/include/Aether/Components/Core/: Tag.h  Transform.h
src/Engine/include/Aether/Components/Physics/: Velocity.h
src/Engine/include/Aether/Components/Rendering/: MeshRenderer.h
src/Engine/include/Aether/Core/: Application.h  Assert.h  Core.h  Hash.h  Layer.h  LayerStack.h  Name.h  Runtime.h  RuntimeObject.h  SmallString.h  String.h  StringBuilder.h  StringView.h
src/Engine/include/Aether/Core/Memory/: Allocator.h  BasicAllocator.h  LinearAllocator.h  Pointer.h
src/Engine/include/Aether/ECS/: ComponentStorage.h  Entity.h  Registry.h
src/Engine/include/Aether/Events/: Event.h  KeyEvent.h  WindowEvent.h
src/Engine/include/Aether/Input/: Input.h  KeyCode.h
src/Engine/include/Aether/Log/: Log.h  LogLevel.h  Logger.h  Sink.h  StdColorSink.h
src/Engine/include/Aether/Math/: Math.h  Matrix.h  Vector.h
src/Engine/include/Aether/Platform/: GraphicsContext.h  Window.h
src/Engine/include/Aether/Renderer/: Buffer.h  CommandBuffer.h  Material.h  Pipeline.h  RenderAPI.h  RenderBackend.h  RenderSurface.h  RenderThread.h  Renderer.h  Sampler.h  Shader.h  VertexLayout.h
src/Engine/include/Aether/Scene/: Camera.h  Scene.h  SceneManager.h
src/Engine/include/Aether/Systems/: ISystem.h
src/Engine/include/Aether/Systems/Rendering/: RenderingSystem.h
src/Engine/src/: CMakeLists.txt  Engine.cpp
src/Engine/src/Core/: Application.cpp  CMakeLists.txt  Hash.cpp  LayerStack.cpp  Name.cpp  RuntimeObject.cpp  String.cpp  StringBuilder.cpp  StringView.cpp
src/Engine/src/Core/Memory/: BasicAllocator.cpp  CMakeLists.txt  DefaultAllocator.cpp  DefaultAllocator.h  LinearAllocator.cpp  NameAllocator.cpp  NameAllocator.h  TempAllocator.cpp  TempAllocator.h  TempScope.cpp  TempScope.h
src/Engine/src/ECS/: CMakeLists.txt  EntityManager.cpp
src/Engine/src/Engine/: CMakeLists.txt
src/Engine/src/Engine/Core/: CMakeLists.txt  Hash.cpp  Name.cpp  RuntimeObject.cpp  String.cpp  StringView.cpp  Window.h
src/Engine/src/Engine/Core/Memory/: CMakeLists.txt  DefaultAllocator.cpp  LinearAllocator.cpp  NameAllocator.cpp  TempScope.cpp  TempScope.h
src/Engine/src/Events/: EventQueue.cpp
src/Engine/src/Input/: CMakeLists.txt  Input.cpp
src/Engine/src/Log/: CMakeLists.txt  Log.cpp  Logger.cpp  NullSink.h  StdColorSink.cpp
src/Engine/src/Math/: CMakeLists.txt  Interop.h  Math.cpp
src/Engine/src/Platform/: CMakeLists.txt  Window.cpp
src/Engine/src/Platform/glfw/: CMakeLists.txt  GLFWGraphicsContext.cpp  GLFWGraphicsContext.h  GLFWWindow.cpp  GLFWWindow.h
src/Engine/src/Platform/include/Aether/Platform/: Window.h
src/Engine/src/Platform/src/: CMakeLists.txt  Platform.cpp  Window.cpp
src/Engine/src/Platform/src/glfw/: CMakeLists.txt  GLFWInput.cpp  GLFWWindow.cpp  GLFWWindow.h
src/Engine/src/Renderer/: CMakeLists.txt  CommandBuffer.cpp  Renderer.cpp
src/Engine/src/Renderer/OpenGL/: CMakeLists.txt  GLBackend.cpp  GLBackend.h
src/Engine/src/Scene/: CMakeLists.txt  Camera.cpp  Entity.cpp  Scene.cpp
src/Engine/src/Systems/: CMakeLists.txt
src/Engine/src/Systems/Movement/: MovementSystem.cpp
src/Engine/src/Systems/Rendering/: RenderingSystem.cpp
src/Sandbox/src/: CMakeLists.txt  SandboxApp.cpp  SandboxApp.h  SandboxLayer.cpp  SandboxLayer.h  main.cpp
